Bezier curve points created with Ctrl+Rightclick have broken Weight and Radius #78883

Closed
opened 2020-07-13 15:25:16 +02:00 by Thomas Radeke · 6 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2080 Super

Blender Version
Broken: 2.83.2, 2.90 Alpha
Worked:

Short description of error
Standalone curve points that are created using Ctrl+Rightclick have extremely low or high (inf) Weight and Radius values, making the entire segment unable to be extruded or beveled. This only happens on disconnected, new segments - extruding existing points or doing Ctrl+Rightclick while another (working) point is selected create more working points.

Exact steps for others to reproduce the error

  • Create a Bezier curve
  • Switch to Edit Mode
  • Deselect all existing points
  • create standalone curve points using Ctrl + Rightclick (assuming leftclick-select)
  • pick one of the new points and observe strange values, both for Weight and Radius
    curve_weight_radius_wrong.png
**System Information** Operating system: Windows 10 Graphics card: RTX 2080 Super **Blender Version** Broken: 2.83.2, 2.90 Alpha Worked: **Short description of error** Standalone curve points that are created using Ctrl+Rightclick have extremely low or high (inf) Weight and Radius values, making the entire segment unable to be extruded or beveled. This only happens on disconnected, new segments - extruding existing points or doing Ctrl+Rightclick while another (working) point is selected create more working points. **Exact steps for others to reproduce the error** - Create a Bezier curve - Switch to Edit Mode - Deselect all existing points - create standalone curve points using Ctrl + Rightclick (assuming leftclick-select) - pick one of the new points and observe strange values, both for Weight and Radius ![curve_weight_radius_wrong.png](https://archive.blender.org/developer/F8691427/curve_weight_radius_wrong.png)
Author

Added subscriber: @ThomasRadeke

Added subscriber: @ThomasRadeke
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report, I can reproduce this here. This can also cause an assert to fail.

Note that this doesn't happen if you delete all of the points and there are none left before placing a point.

Thanks for the report, I can reproduce this here. This can also cause an assert to fail. Note that this doesn't happen if you delete all of the points and there are none left before placing a point.

This issue was referenced by 93e14e5935

This issue was referenced by 93e14e59354018adf1443f51597377933cfb0674

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-07-14 08:05:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78883
No description provided.