Fix T78883: New bezier curve points to uninitialized memory